examples/python-web-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: python-app
        image: maheshf1/python-sample-app-demo:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: db-connection        
          mountPath: /opt
        - name: db-secret            
          mountPath: /opt/secret
          readOnly: true
      volumes:
      - name: db-connection          
        configMap:
          name: test-cm
      - name: db-secret              
        secret:
          secretName: test-secret1
